bk_ida/sjengida/g3/suicide_mid_eval
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/suicide_mid_eval/src/seval.c:859:67: error: use of undeclared identifier 'xmmword_4251A0'
*( __m128i *)white_back_pawn = _mm_load_si128( ( const __m128i *)&xmmword_4251A0); 
                                                                  ^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/suicide_mid_eval/src/seval.c:865:67: error: use of undeclared identifier 'xmmword_4251B0'
*( __m128i *)black_back_pawn = _mm_load_si128( ( const __m128i *)&xmmword_4251B0); 
                                                                  ^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/suicide_mid_eval/src/seval.c:866:12: error: expected expression
*( _OWORD *)&white_back_pawn[4] = *( _OWORD *)white_back_pawn; 
           ^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/suicide_mid_eval/src/seval.c:866:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&white_back_pawn[4] = *( _OWORD *)white_back_pawn; 
   ^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/suicide_mid_eval/src/seval.c:866:46: error: expected expression
*( _OWORD *)&white_back_pawn[4] = *( _OWORD *)white_back_pawn; 
                                             ^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/suicide_mid_eval/src/seval.c:866:38: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&white_back_pawn[4] = *( _OWORD *)white_back_pawn; 
                                     ^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/suicide_mid_eval/src/seval.c:867:12: error: expected expression
*( _OWORD *)&black_back_pawn[4] = *( _OWORD *)black_back_pawn; 
           ^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/suicide_mid_eval/src/seval.c:867:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&black_back_pawn[4] = *( _OWORD *)black_back_pawn; 
   ^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/suicide_mid_eval/src/seval.c:867:46: error: expected expression
*( _OWORD *)&black_back_pawn[4] = *( _OWORD *)black_back_pawn; 
                                             ^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/suicide_mid_eval/src/seval.c:867:38: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&black_back_pawn[4] = *( _OWORD *)black_back_pawn; 
                                     ^
10 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/suicide_mid_eval/src/obj/seval.o] Error 1
